third_party/rust/pin-project/tests/ui/cfg/unsupported.stderr
error: #[pin_project] attribute may not be used on structs with zero fields
  --> tests/ui/cfg/unsupported.rs:7:15
   |
7  |   struct Struct {
   |  _______________^
8  | |     #[cfg(any())]
9  | |     #[pin]
10 | |     f: u8,
11 | | }
   | |_^
